Indirect light clamping doesn't clamp indirect #91714

Closed
opened 2021-09-26 01:32:56 +02:00 by Yegor · 8 comments

System Information
Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-21 14:39, hash: 84f98e28e3
Worked: 2.93.4

Short description of error
Indirect light clamping doesn't clamp indirect lights properly
The highlights on the monkey in the mirror come from the original monkey, so they are 100% indirect. Therefore they ignore the indirect clamp setting = 0.01.
The plane for some reason obeys clamping.
image.png

Exact steps for others to reproduce the error
Open the file, enable viewport rendering and play around with the indir clamping setting.
3_dir_indir_clamp.blend

**System Information** Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-21 14:39, hash: `84f98e28e3` Worked: 2.93.4 **Short description of error** Indirect light clamping doesn't clamp indirect lights properly The highlights on the monkey in the mirror come from the original monkey, so they are 100% indirect. Therefore they ignore the indirect clamp setting = 0.01. The plane for some reason obeys clamping. ![image.png](https://archive.blender.org/developer/F10596548/image.png) **Exact steps for others to reproduce the error** Open the file, enable viewport rendering and play around with the indir clamping setting. [3_dir_indir_clamp.blend](https://archive.blender.org/developer/F10596558/3_dir_indir_clamp.blend)
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this issue. Cycles did not behave like this prior to the Cycles-X merge so I assume it's caused by that.

System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version: 3.0.0 Alpha, branch: master, commit date: 2021-09-25 07:31, hash: 505422220d

I can confirm this issue. Cycles did not behave like this prior to the Cycles-X merge so I assume it's caused by that. **System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 Blender Version: 3.0.0 Alpha, branch: master, commit date: 2021-09-25 07:31, hash: `505422220d`

This issue was referenced by blender/cycles@d899d32229

This issue was referenced by blender/cycles@d899d322290e911e9726e429476d9f3d264ddce4

This issue was referenced by 4a562f5077

This issue was referenced by 4a562f50778c39ce087432094cd4eac86821a0b5

This issue was referenced by None@62709

This issue was referenced by None@62709

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-09-27 14:38:24 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91714
No description provided.