Fix T91714: Cycles direct/indirect clamp distinction not working correctly